human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_24.wast
(assert_invalid
  (module (func $type-value-num-vs-nums (result i32 i32)
    (loop (result i32 i32) (i32.const 0))
  ))
  "type mismatch"
)